--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,10 @@ binrw = "0.10"
 flate2 = "1.0"
 
 clap  = { version = "3.2", optional = true, features = ["derive"] }
+pbr = { version = "1.0", optional = true}
 
 [features]
-build-binary = ["clap"]
+build-binary = ["clap","pbr"]
 
 [lib]         
 name = "rciso"    
